[project]
name = "ouroboros"
dynamic = ["version"]
description = "Implementing restartable, resumable, effect handlers"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["effects", "NLP", "LLM"]
requires-python = ">=3.9"

